--- a/PingTool/Views/MainPage.xaml
+++ b/PingTool/Views/MainPage.xaml
@@ -2,6 +2,7 @@
     x:Class="PingTool.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i="using:Microsoft.Xaml.Interactivity"
     xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
@@ -48,17 +49,16 @@
                 </i:Interaction.Behaviors>
             </TextBox>
             <Button
+                x:Name="StartBtn"
                 Grid.Column="2"
                 VerticalAlignment="Center"
                 Background="Transparent"
-                Command="{Binding StartCommand}">
+                Command="{Binding StartCommand}"
+                ToolTipService.Placement="Mouse"
+                ToolTipService.ToolTip="Start/Stop ping">
                 <StackPanel Orientation="Horizontal">
                     <SymbolIcon x:Name="StartIcon" />
-                    <TextBlock
-                        x:Name="StartTest"
-                        Margin="{StaticResource XSmallLeftMargin}"
-                        VerticalAlignment="Center"
-                        FontSize="{StaticResource SmallFontSize}" />
+                    <TextBlock x:Name="StartTest" FontSize="{StaticResource SmallFontSize}" />
 
                 </StackPanel>
                 <i:Interaction.Behaviors>
@@ -74,6 +74,10 @@
                             PropertyName="Text"
                             TargetObject="{Binding ElementName=StartTest}"
                             Value="Stop ping" />
+                        <!--<ic:ChangePropertyAction
+                            PropertyName="ToolTipService.ToolTip"
+                            TargetObject="{Binding ElementName=StartBtn}"
+                            Value="Stop ping" />-->
                         <ic:ChangePropertyAction
                             PropertyName="IsEnabled"
                             TargetObject="{Binding ElementName=TxtAddress}"
@@ -91,6 +95,10 @@
                             PropertyName="Text"
                             TargetObject="{Binding ElementName=StartTest}"
                             Value="Start ping" />
+                        <!--<ic:ChangePropertyAction
+                            PropertyName="ToolTipService.ToolTip"
+                            TargetObject="{Binding ElementName=StartBtn}"
+                            Value="Start ping" />-->
                         <ic:ChangePropertyAction
                             PropertyName="IsEnabled"
                             TargetObject="{Binding ElementName=TxtAddress}"
@@ -104,6 +112,10 @@
                             PropertyName="Margin"
                             TargetObject="{Binding ElementName=AddressHeaderGrid}"
                             Value="0 40 0 0" />
+                        <!--<ic:ChangePropertyAction
+                            PropertyName="ToolTipService.ToolTip"
+                            TargetObject="{Binding ElementName=CompactBtn}"
+                            Value="Return back to main screen" />-->
                     </ic:DataTriggerBehavior>
                     <ic:DataTriggerBehavior
                         Binding="{Binding IsCompactMode}"
@@ -113,6 +125,10 @@
                             PropertyName="Margin"
                             TargetObject="{Binding ElementName=AddressHeaderGrid}"
                             Value="0 0 0 0" />
+                        <!--<ic:ChangePropertyAction
+                            PropertyName="ToolTipService.ToolTip"
+                            TargetObject="{Binding ElementName=CompactBtn}"
+                            Value="Show in compact window" />-->
                     </ic:DataTriggerBehavior>
                 </i:Interaction.Behaviors>
 
@@ -121,7 +137,9 @@
                 Grid.Column="3"
                 VerticalAlignment="Center"
                 Background="Transparent"
-                Command="{Binding ClearCommand}">
+                Command="{Binding ClearCommand}"
+                ToolTipService.Placement="Mouse"
+                ToolTipService.ToolTip="Clear area">
                 <StackPanel Orientation="Horizontal">
                     <SymbolIcon Symbol="ClearSelection" />
                     <TextBlock
@@ -136,7 +154,9 @@
                 Grid.Column="4"
                 VerticalAlignment="Center"
                 Background="Transparent"
-                Command="{Binding ExportCommand}">
+                Command="{Binding ExportCommand}"
+                ToolTipService.Placement="Mouse"
+                ToolTipService.ToolTip="Export data in file">
                 <StackPanel Orientation="Horizontal">
                     <SymbolIcon Symbol="MoveToFolder" />
                     <TextBlock
@@ -148,10 +168,13 @@
                 </StackPanel>
             </Button>
             <Button
+                x:Name="CompactBtn"
                 Grid.Column="5"
                 VerticalAlignment="Center"
                 Background="Transparent"
-                Command="{Binding CompactCommand}">
+                Command="{Binding CompactCommand}"
+                ToolTipService.Placement="Mouse"
+                ToolTipService.ToolTip="Show/Hide Compact window">
                 <StackPanel Orientation="Horizontal">
                     <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE963;" />
                     <TextBlock
@@ -417,6 +440,7 @@
             <GridView
                 x:Name="NetworkConnectionGrid"
                 Grid.Row="3"
+                animations:ReorderGridAnimation.Duration="500"
                 ItemsSource="{Binding LocalLANCollection}">
                 <GridView.ItemTemplate>
                     <DataTemplate x:DataType="net:NetworkInterface">
