--- a/PingTool.WinUI3/Views/HistoryPage.xaml
+++ b/PingTool.WinUI3/Views/HistoryPage.xaml
@@ -1,119 +1,217 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Page
     x:Class="PingTool.Views.HistoryPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid Padding="24,16">
+    <Grid Padding="24">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <!-- Header -->
-        <StackPanel Orientation="Horizontal" Spacing="12" Margin="0,0,0,24">
-            <Border 
-                Width="44" Height="44" 
-                CornerRadius="10"
-                Background="{StaticResource AccentGradientBrush}">
-                <FontIcon 
-                    FontFamily="{StaticResource SymbolThemeFontFamily}" 
-                    Glyph="&#xE81C;" 
-                    FontSize="20"
-                    Foreground="White"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"/>
-            </Border>
-            <StackPanel VerticalAlignment="Center">
-                <TextBlock Text="Ping History" FontSize="24" FontWeight="Bold"/>
-                <TextBlock 
-                    Text="View your previous ping sessions" 
-                    FontSize="12" 
-                    Foreground="{ThemeResource TextFillColorSecondaryBrush}"/>
+        <Grid Margin="0,0,0,20">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Orientation="Horizontal" Spacing="12">
+                <Border
+                    Width="40"
+                    Height="40"
+                    Background="{StaticResource AccentGradientBrush}"
+                    CornerRadius="8">
+                    <FontIcon
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        FontFamily="{StaticResource SymbolThemeFontFamily}"
+                        FontSize="18"
+                        Foreground="White"
+                        Glyph="&#xE81C;" />
+                </Border>
+                <StackPanel VerticalAlignment="Center">
+                    <TextBlock
+                        FontSize="24"
+                        FontWeight="Bold"
+                        Text="History" />
+                    <TextBlock
+                        FontSize="12"
+                        Foreground="{ThemeResource TextFillColorSecondaryBrush}"
+                        Text="View and export your network diagnostics history" />
+                </StackPanel>
             </StackPanel>
+
+            <Button
+                Grid.Column="1"
+                Click="ClearAll_Click"
+                ToolTipService.ToolTip="Clear all history">
+                <StackPanel Orientation="Horizontal" Spacing="6">
+                    <FontIcon
+                        FontFamily="{StaticResource SymbolThemeFontFamily}"
+                        FontSize="12"
+                        Glyph="&#xE74D;" />
+                    <TextBlock Text="Clear All" />
+                </StackPanel>
+            </Button>
+        </Grid>
+
+        <!-- Filter Tabs -->
+        <StackPanel
+            Grid.Row="1"
+            Margin="0,0,0,16"
+            Orientation="Horizontal"
+            Spacing="8">
+            <RadioButton
+                x:Name="AllFilter"
+                Content="All"
+                GroupName="Filter"
+                IsChecked="True"
+                Click="Filter_Click"
+                Style="{StaticResource DefaultToggleButtonStyle}" />
+            <RadioButton
+                Content="Ping"
+                GroupName="Filter"
+                Click="Filter_Click"
+                Tag="Ping"
+                Style="{StaticResource DefaultToggleButtonStyle}" />
+            <RadioButton
+                Content="Traceroute"
+                GroupName="Filter"
+                Click="Filter_Click"
+                Tag="Traceroute"
+                Style="{StaticResource DefaultToggleButtonStyle}" />
+            <RadioButton
+                Content="Port Scan"
+                GroupName="Filter"
+                Click="Filter_Click"
+                Tag="PortScan"
+                Style="{StaticResource DefaultToggleButtonStyle}" />
+            <RadioButton
+                Content="Speed Test"
+                GroupName="Filter"
+                Click="Filter_Click"
+                Tag="SpeedTest"
+                Style="{StaticResource DefaultToggleButtonStyle}" />
         </StackPanel>
 
         <!-- History List -->
-        <Border Grid.Row="1" Style="{StaticResource ModernCardStyle}" Padding="0">
+        <Border
+            Grid.Row="2"
+            Padding="16"
+            Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+            CornerRadius="8">
             <Grid>
-                <ListView x:Name="HistoryList" Padding="8" SelectionMode="None">
+                <ListView
+                    x:Name="HistoryList"
+                    ItemsSource="{x:Bind FilteredHistory}"
+                    SelectionMode="None">
                     <ListView.ItemTemplate>
                         <DataTemplate>
-                            <Border 
-                                Padding="16" 
-                                Margin="0,4"
-                                Background="{ThemeResource SubtleFillColorSecondaryBrush}"
-                                CornerRadius="8">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="Auto"/>
-                                    </Grid.ColumnDefinitions>
-                                    
-                                    <Border 
-                                        Width="40" Height="40" 
-                                        CornerRadius="8"
-                                        Background="{StaticResource InfoGradientBrush}"
-                                        Margin="0,0,16,0">
-                                        <FontIcon 
-                                            FontFamily="{StaticResource SymbolThemeFontFamily}" 
-                                            Glyph="&#xE968;" 
-                                            FontSize="16"
-                                            Foreground="White"
-                                            HorizontalAlignment="Center"
-                                            VerticalAlignment="Center"/>
-                                    </Border>
-                                    
-                                    <StackPanel Grid.Column="1" VerticalAlignment="Center">
-                                        <TextBlock Text="{Binding IpAddress}" FontWeight="SemiBold" FontSize="15"/>
-                                        <TextBlock 
-                                            Text="{Binding Date}" 
-                                            Foreground="{ThemeResource TextFillColorSecondaryBrush}" 
-                                            FontSize="12"/>
+                            <Grid Padding="8,12">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+
+                                <!-- Type Icon -->
+                                <Border
+                                    Width="32"
+                                    Height="32"
+                                    Margin="0,0,12,0"
+                                    Background="{ThemeResource SubtleFillColorSecondaryBrush}"
+                                    CornerRadius="6">
+                                    <FontIcon
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        FontFamily="{StaticResource SymbolThemeFontFamily}"
+                                        FontSize="14"
+                                        Glyph="{Binding TypeIcon}" />
+                                </Border>
+
+                                <!-- Details -->
+                                <StackPanel Grid.Column="1" VerticalAlignment="Center">
+                                    <StackPanel Orientation="Horizontal" Spacing="8">
+                                        <TextBlock
+                                            FontSize="13"
+                                            FontWeight="SemiBold"
+                                            Text="{Binding DisplayTitle}" />
+                                        <Border
+                                            Padding="6,2"
+                                            VerticalAlignment="Center"
+                                            Background="{ThemeResource SubtleFillColorSecondaryBrush}"
+                                            CornerRadius="4">
+                                            <TextBlock
+                                                FontSize="10"
+                                                Text="{Binding TypeDisplay}" />
+                                        </Border>
                                     </StackPanel>
-                                    
-                                    <Button 
-                                        Grid.Column="2" 
-                                        Content="View" 
-                                        Click="ViewDetails_Click" 
-                                        Tag="{Binding PingId}"
-                                        Style="{StaticResource AccentButtonStyle}"
-                                        Padding="16,8"
-                                        CornerRadius="6"/>
-                                </Grid>
-                            </Border>
+                                    <StackPanel Orientation="Horizontal" Spacing="12">
+                                        <TextBlock
+                                            FontSize="11"
+                                            Foreground="{ThemeResource TextFillColorSecondaryBrush}"
+                                            Text="{Binding TimestampDisplay}" />
+                                        <TextBlock
+                                            FontSize="11"
+                                            Foreground="{ThemeResource TextFillColorTertiaryBrush}"
+                                            Text="{Binding Summary}" />
+                                    </StackPanel>
+                                </StackPanel>
+
+                                <!-- Export Button -->
+                                <Button
+                                    Grid.Column="2"
+                                    Margin="8,0"
+                                    Padding="8"
+                                    Click="Export_Click"
+                                    Tag="{Binding Id}"
+                                    ToolTipService.ToolTip="Export to TXT">
+                                    <FontIcon
+                                        FontFamily="{StaticResource SymbolThemeFontFamily}"
+                                        FontSize="12"
+                                        Glyph="&#xE78C;" />
+                                </Button>
+
+                                <!-- Delete Button -->
+                                <Button
+                                    Grid.Column="3"
+                                    Padding="8"
+                                    Click="Delete_Click"
+                                    Tag="{Binding Id}"
+                                    ToolTipService.ToolTip="Delete">
+                                    <FontIcon
+                                        FontFamily="{StaticResource SymbolThemeFontFamily}"
+                                        FontSize="12"
+                                        Foreground="{ThemeResource SystemFillColorCriticalBrush}"
+                                        Glyph="&#xE74D;" />
+                                </Button>
+                            </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
-                    <ListView.ItemContainerStyle>
-                        <Style TargetType="ListViewItem">
-                            <Setter Property="Padding" Value="0"/>
-                            <Setter Property="Margin" Value="0"/>
-                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                        </Style>
-                    </ListView.ItemContainerStyle>
                 </ListView>
 
                 <!-- Empty State -->
-                <StackPanel 
-                    x:Name="EmptyMessage"
-                    HorizontalAlignment="Center" 
+                <StackPanel
+                    x:Name="EmptyState"
+                    HorizontalAlignment="Center"
                     VerticalAlignment="Center"
+                    Spacing="12"
                     Visibility="Collapsed">
-                    <FontIcon 
-                        FontFamily="{StaticResource SymbolThemeFontFamily}" 
-                        Glyph="&#xE81C;" 
+                    <FontIcon
+                        HorizontalAlignment="Center"
+                        FontFamily="{StaticResource SymbolThemeFontFamily}"
                         FontSize="48"
-                        Foreground="{ThemeResource TextFillColorTertiaryBrush}"/>
-                    <TextBlock 
-                        Text="No ping history yet" 
+                        Foreground="{ThemeResource TextFillColorSecondaryBrush}"
+                        Glyph="&#xE81C;" />
+                    <TextBlock
                         HorizontalAlignment="Center"
-                        Margin="0,12,0,4"
-                        FontWeight="SemiBold"/>
-                    <TextBlock 
-                        Text="Your ping sessions will appear here" 
-                        HorizontalAlignment="Center"
-                        FontSize="12"
-                        Foreground="{ThemeResource TextFillColorSecondaryBrush}"/>
+                        Foreground="{ThemeResource TextFillColorSecondaryBrush}"
+                        Text="No history yet. Run some tests to see them here." />
                 </StackPanel>
             </Grid>
         </Border>
